# boruvka-mst

./: .gitignore  CMakeLists.txt  Makefile  README.md  ]  graph-gen.py  graph-viz.py  problems.md
include/: graph.h  mfset.h  mst.h  utils.h
src/: graph.c  main.c  mfset.c  mst.c  utils.c
